--- a/app/matplotlib.ipynb
+++ b/app/matplotlib.ipynb
@@ -37,7 +37,9 @@
     "* create a line plot;\n",
     "* set the title and labels for x and y axis;\n",
     "* set the title for the plot;\n",
-    "* show it."
+    "* show it.\n",
+    "\n",
+    "> Please, note: you can get more information about line plot [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html)."
    ],
    "metadata": {
     "collapsed": false
@@ -74,7 +76,9 @@
     "* fill the plot with sizes;\n",
     "* set the title and labels for x and y axis;\n",
     "* set the colorbar label;\n",
-    "* show it."
+    "* show it.\n",
+    "\n",
+    "> Please, note: you can get more information about scatter plot [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.scatter.html)."
    ],
    "metadata": {
     "collapsed": false
@@ -109,7 +113,9 @@
     "* create a bar plot;\n",
     "* set the title and labels for x and y axis;\n",
     "* rate the x ticks by 45 degrees;\n",
-    "* show it."
+    "* show it.\n",
+    "\n",
+    "> Please, note: you can get more information about bar plot [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html)."
    ],
    "metadata": {
     "collapsed": false
@@ -143,7 +149,9 @@
     "* create a histogram;\n",
     "* set the title and labels for x and y axis;\n",
     "* make bins size not so wide;\n",
-    "* show it."
+    "* show it.\n",
+    "\n",
+    "> Please, note: you can get more information about histogram [here](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html)."
    ],
    "metadata": {
     "collapsed": false
@@ -176,7 +184,9 @@
     "* set the title;\n",
     "* make numbers in format like `10.0%`;\n",
     "* set the start angle for better view;\n",
-    "* show it."
+    "* show it.\n",
+    "\n",
+    "> Please, note: you can get more information about pie plot [here](https://matplotlib.org/stable/gallery/pie_and_polar_charts/pie_features.html)."
    ],
    "metadata": {
     "collapsed": false
@@ -213,7 +223,9 @@
     "* set the title and labels for x and y axis for each subplot;\n",
     "* set the title for the figure;\n",
     "* set different colors for each plot;\n",
-    "* show it horizontally."
+    "* show it horizontally.\n",
+    "\n",
+    "> PLease, note: you can get more information about subplots [here](https://matplotlib.org/stable/gallery/subplots_axes_and_figures/subplots_demo.html)."
    ],
    "metadata": {
     "collapsed": false
@@ -248,7 +260,9 @@
     "* create a line plot;\n",
     "* set the title and labels for x and y axis;\n",
     "* rotate x ticks by 45 degrees;\n",
-    "* show it."
+    "* show it.\n",
+    "\n",
+    "> Please, note: you can get more information about time series [here](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html)."
    ],
    "metadata": {
     "collapsed": false
@@ -275,14 +289,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Task 8 Surface 3D Plot Optional\n",
+    "# (Optional) Task 8 Surface 3D Plot\n",
     "\n",
     "You have prepared data for 3D surface plot, complete the following tasks:\n",
     "* create a figure;\n",
     "* add a subplot for 3D surface plot;\n",
     "* plot the surface, `cmap` can be `viridis`;\n",
     "* set the title and labels for x, y and z axis;\n",
-    "* show it."
+    "* show it.\n",
+    "\n",
+    "> Please, note: you can get more information about 3D surface plot [here](https://matplotlib.org/stable/gallery/mplot3d/surface3d.html)."
    ],
    "metadata": {
     "collapsed": false
@@ -311,7 +327,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Task 9 Optional\n",
+    "# (Optional) Task 9\n",
     "\n",
     "You are working for a retail company that wants to understand its customer base better. The company has collected various demographic and purchasing behavior data for a sample of customers. Your task is to create a scatter plot matrix to visualize the relationships between different variables and identify potential customer segments based on their characteristics. The scatter plot matrix will allow you to observe the pairwise relationships between multiple variables simultaneously.\n",
     "\n",
